...
                android:background="@drawable/drawable_primary_background"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/pokemon_type_text"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_level_text"
                app:srcCompat="@drawable/icon_placeholder" />

            <TextView
                android:id="@+id/pokemon_name_text"
                android:layout_width="wrap_content"
...
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingEnd="16dp"
                            android:paddingStart="0dp"
                            android:visibility="gone"
                            tools:text="eviolite" />

                        <ImageView
                            android:id="@+id/configuration_item_empty_state"
                            style="@style/primary_text_with_background_style"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_add_circle_black_24dp"
                            android:tint="@color/text_primary"
                            android:visibility="visible" />
...
                            style="@style/primary_text_with_background_style"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:visibility="gone"
                            tools:text="modest" />

                        <ImageView
                            android:id="@+id/configuration_nature_empty_state"
                            style="@style/primary_text_with_background_style"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_add_circle_black_24dp"
                            android:tint="@color/text_primary"
...
                            style="@style/primary_text_with_background_style"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:visibility="gone"
                            tools:text="magic guard" />

                        <ImageView
                            android:id="@+id/configuration_ability_empty_state"
                            style="@style/primary_text_with_background_style"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_add_circle_black_24dp"
                            android:tint="@color/text_primary"
...
                        android:layout_height="match_parent"
                        android:id="@+id/guideline5"
                        app:layout_constraintGuide_percent="0.5"
                        android:orientation="vertical" />

                    <include
                        android:id="@+id/configuration_move_0_frame"
                        layout="@layout/configuration_move_view_layout"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/configuration_move_1_frame"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/configuration_move_title_text" />

                    <include
                        layout="@layout/configuration_move_view_layout"
                        android:layout_width="148dp"
...
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/guideline5"
                        app:layout_constraintHorizontal_bias="0.491"
                        android:id="@+id/configuration_move_2_frame" />

                    <include
                        android:id="@+id/configuration_move_3_frame"
                        layout="@layout/configuration_move_view_layout"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toLeftOf="@+id/guideline5"
                        android:layout_marginLeft="8dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/configuration_floating_save_button_middle"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal|bottom">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
...
