...
            android:id="@+id/item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/configuration_save_dialog_name_tag"
            app:layout_constraintTop_toTopOf="@+id/create_configuration_dialog_edit_text"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/create_configuration_dialog_edit_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/create_configuration_dialog_edit_text"
            android:layout_marginEnd="8dp" />

...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_configuration_dialog_save_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/configuration_save_dialog_action_text"
            android:backgroundTint="@color/primary_light"
            />
...
